--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <nav>
       <ol>
         <li><a href="#introduce">个人简介</a></li>
-        <li><a href="#introduce">重要事件</a></li>
-        <li><a href="#introduce">主要成就</a></li>
-        <li><a href="#introduce">主要作品</a></li>
-        <li><a href="#introduce">生活照</a></li>
-        <li><a href="#introduce">生平</a></li>
+        <li><a href="#events">重要事件</a></li>
+        <li><a href="#awards">主要成就</a></li>
+        <li><a href="#works">主要作品</a></li>
+        <li><a href="#pictures">生活照</a></li>
+        <li><a href="#life">生平</a></li>
       </ol>
     </nav>
     <h2 id="introduce">个人简介</h2>
     <p>李敏镐，韩语이민호，生于1987年6月22日，韩国男演员，身高187公分。</p>
-    <h2>重要事件</h2>
+    <h2 id="events">重要事件</h2>
     <ul>
       <li>2006年以《秘密的校园》正式出道</li>
       <li>
@@ -34,7 +34,7 @@
       <li>2020年以《The King：永远的君主》回归小萤幕</li>
       <li>2021年参演美国Apple TV+剧集《Pachinko》，正式进军海外市场</li>
     </ul>
-    <h2>主要成就</h2>
+    <h2 id="awards">主要成就</h2>
 
     <table>
       <thead>
@@ -102,7 +102,7 @@
         </tr>
       </tbody>
     </table>
-    <h2>主要作品</h2>
+    <h2 id="works">主要作品</h2>
     <table>
       <thead>
         <tr>
@@ -189,7 +189,7 @@
         </tr>
       </tbody>
     </table>
-    <h2>生活照</h2>
+    <h2 id="pictures">生活照</h2>
     <div>
       <a href="image/1.jpg" target="_blank"
         ><img width="400" src="image/1.jpg" alt="图一"
@@ -205,7 +205,7 @@
         ><img width="400" src="image/3.jpg" alt="图三"
       /></a>
     </div>
-    <h2>生平</h2>
+    <h2 id="life">生平</h2>
 
     <p>
       李敏镐有父母和一个姐姐，他与妈妈、姐姐感情非常要好。她妈妈曾说，他小时候学说话学得特别快，也喜欢看报纸，是聪明内向的小孩，不擅长在人前表演，所以让他去学了演讲。小学时，李敏镐曾受教于足球国手车范根门下，表现优异，很受车教练赏识。
