--- a/index.html
+++ b/index.html
@@ -26,200 +26,210 @@
         <li><a href="#life">生平</a></li>
       </ol>
     </nav>
-    <h2 id="introduce">个人简介</h2>
-    <p>李敏镐，韩语이민호，生于1987年6月22日，韩国男演员，身高187公分。</p>
-    <h2 id="events">重要事件</h2>
-    <ul>
-      <li>2006年以《秘密的校园》正式出道</li>
-      <li>
-        2009主演《花样男子》获第45届百想艺术大奖电视部门最佳新人奖后红极一时
-      </li>
-      <li>2013年主演《继承者们》再创演艺事业高峰</li>
-      <li>
-        2016年主演韩剧《蓝色海洋的传说》后获选成为2017年韩国国家品牌大赏获奖人
-      </li>
-      <li>2017年5月12日以公益兵入伍（2019年4月25日退役）</li>
-      <li>2020年以《The King：永远的君主》回归小萤幕</li>
-      <li>2021年参演美国Apple TV+剧集《Pachinko》，正式进军海外市场</li>
-    </ul>
-    <h2 id="awards">主要成就</h2>
+    <section>
+      <h2 id="introduce">个人简介</h2>
+      <p>李敏镐，韩语이민호，生于1987年6月22日，韩国男演员，身高187公分。</p>
+      <h2 id="events">重要事件</h2>
+      <ul>
+        <li>2006年以《秘密的校园》正式出道</li>
+        <li>
+          2009主演《花样男子》获第45届百想艺术大奖电视部门最佳新人奖后红极一时
+        </li>
+        <li>2013年主演《继承者们》再创演艺事业高峰</li>
+        <li>
+          2016年主演韩剧《蓝色海洋的传说》后获选成为2017年韩国国家品牌大赏获奖人
+        </li>
+        <li>2017年5月12日以公益兵入伍（2019年4月25日退役）</li>
+        <li>2020年以《The King：永远的君主》回归小萤幕</li>
+        <li>2021年参演美国Apple TV+剧集《Pachinko》，正式进军海外市场</li>
+      </ul>
+    </section>
+    <section>
+      <h2 id="awards">主要成就</h2>
 
-    <table>
-      <thead>
-        <tr>
-          <th>年份</th>
-          <th>奖项</th>
-          <th>地区</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2015</td>
-          <td>电影类最佳人气奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>爱奇艺明星奖</td>
-          <td>中国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>最佳新人男演员奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>制作人选择奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>最佳新人男演员奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>人气明星奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td>最佳新人男演员奖</td>
-          <td>韩国</td>
-        </tr>
-        <tr>
-          <td>2016</td>
-          <td>最受欢迎亚洲偶像奖</td>
-          <td>中国</td>
-        </tr>
-        <tr>
-          <td>2016</td>
-          <td>微博亚洲电影先锋人物奖</td>
-          <td>中国</td>
-        </tr>
-        <tr>
-          <td>2016</td>
-          <td>微博电影最受期待的搞笑动作电影</td>
-          <td>中国</td>
-        </tr>
-        <tr>
-          <td>2017</td>
-          <td>微博"给力男主角奖"</td>
-          <td>中国</td>
-        </tr>
-      </tbody>
-    </table>
-    <h2 id="works">主要作品</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>年份</th>
-          <th>剧名</th>
-          <th>性质</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2003</td>
-          <td>《玉琳的成长日记》</td>
-          <td>闲角</td>
-        </tr>
-        <tr>
-          <td>2004</td>
-          <td>《男生女生向前走》</td>
-          <td>客串</td>
-        </tr>
-        <tr>
-          <td>2005</td>
-          <td>《爱情餐歌》</td>
-          <td>闲角</td>
-        </tr>
-        <tr>
-          <td>2006</td>
-          <td>《秘密的校园》</td>
-          <td>男配角</td>
-        </tr>
-        <tr>
-          <td>2007</td>
-          <td>《我是老师》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2007</td>
-          <td>《奔跑吧，鲭鱼》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2008</td>
-          <td>《虽然我也不懂》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2009</td>
-          <td>《花样男子》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2010</td>
-          <td>《个人取向》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2011</td>
-          <td>《城市猎人》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2012</td>
-          <td>《医仙》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2013</td>
-          <td>《欲戴王冠，必承其重－继承者们》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2016</td>
-          <td>《蓝色海洋的传说》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2020</td>
-          <td>《The King：永远的君主》</td>
-          <td>第一男主角</td>
-        </tr>
-        <tr>
-          <td>2021</td>
-          <td>《Pachinko》</td>
-          <td>男主角</td>
-        </tr>
-      </tbody>
-    </table>
-    <h2 id="pictures">生活照</h2>
-    <div>
-      <a href="image/1.jpg" target="_blank"
-        ><img width="400" src="image/1.jpg" alt="图一"
-      /></a>
-    </div>
-    <div>
-      <a href="image/2.jpg" target="_blank"
-        ><img width="400" src="image/2.jpg" alt="图二"
-      /></a>
-    </div>
-    <div>
-      <a href="image/3.jpg" target="_blank"
-        ><img width="400" src="image/3.jpg" alt="图三"
-      /></a>
-    </div>
-    <h2 id="life">生平</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>年份</th>
+            <th>奖项</th>
+            <th>地区</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2015</td>
+            <td>电影类最佳人气奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>爱奇艺明星奖</td>
+            <td>中国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>最佳新人男演员奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>制作人选择奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>最佳新人男演员奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>人气明星奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2015</td>
+            <td>最佳新人男演员奖</td>
+            <td>韩国</td>
+          </tr>
+          <tr>
+            <td>2016</td>
+            <td>最受欢迎亚洲偶像奖</td>
+            <td>中国</td>
+          </tr>
+          <tr>
+            <td>2016</td>
+            <td>微博亚洲电影先锋人物奖</td>
+            <td>中国</td>
+          </tr>
+          <tr>
+            <td>2016</td>
+            <td>微博电影最受期待的搞笑动作电影</td>
+            <td>中国</td>
+          </tr>
+          <tr>
+            <td>2017</td>
+            <td>微博"给力男主角奖"</td>
+            <td>中国</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section>
+      <h2 id="works">主要作品</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>年份</th>
+            <th>剧名</th>
+            <th>性质</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2003</td>
+            <td>《玉琳的成长日记》</td>
+            <td>闲角</td>
+          </tr>
+          <tr>
+            <td>2004</td>
+            <td>《男生女生向前走》</td>
+            <td>客串</td>
+          </tr>
+          <tr>
+            <td>2005</td>
+            <td>《爱情餐歌》</td>
+            <td>闲角</td>
+          </tr>
+          <tr>
+            <td>2006</td>
+            <td>《秘密的校园》</td>
+            <td>男配角</td>
+          </tr>
+          <tr>
+            <td>2007</td>
+            <td>《我是老师》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2007</td>
+            <td>《奔跑吧，鲭鱼》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2008</td>
+            <td>《虽然我也不懂》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2009</td>
+            <td>《花样男子》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2010</td>
+            <td>《个人取向》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2011</td>
+            <td>《城市猎人》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2012</td>
+            <td>《医仙》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2013</td>
+            <td>《欲戴王冠，必承其重－继承者们》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2016</td>
+            <td>《蓝色海洋的传说》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2020</td>
+            <td>《The King：永远的君主》</td>
+            <td>第一男主角</td>
+          </tr>
+          <tr>
+            <td>2021</td>
+            <td>《Pachinko》</td>
+            <td>男主角</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section>
+      <h2 id="pictures">生活照</h2>
+      <div>
+        <a href="image/1.jpg" target="_blank"
+          ><img width="400" src="image/1.jpg" alt="图一"
+        /></a>
+      </div>
+      <div>
+        <a href="image/2.jpg" target="_blank"
+          ><img width="400" src="image/2.jpg" alt="图二"
+        /></a>
+      </div>
+      <div>
+        <a href="image/3.jpg" target="_blank"
+          ><img width="400" src="image/3.jpg" alt="图三"
+        /></a>
+      </div>
+    </section>
+    <section>
+      <h2 id="life">生平</h2>
 
-    <p>
-      李敏镐有父母和一个姐姐，他与妈妈、姐姐感情非常要好。她妈妈曾说，他小时候学说话学得特别快，也喜欢看报纸，是聪明内向的小孩，不擅长在人前表演，所以让他去学了演讲。小学时，李敏镐曾受教于足球国手车范根门下，表现优异，很受车教练赏识。
-    </p>
-    <p>
-      李敏镐曾说，当时比赛全年级没有人能赢他。小时候梦想成为像朴智星一样的足球选手。然而因在一次比赛中胳膊骨折，父亲希望他能更专注学业，便没有再继续练下去。尽管没有成为足球选手，练习足球仍造就了李敏镐坚毅的性格，出色的球技也成为其日后出道的契机。
-    </p>
+      <p>
+        李敏镐有父母和一个姐姐，他与妈妈、姐姐感情非常要好。她妈妈曾说，他小时候学说话学得特别快，也喜欢看报纸，是聪明内向的小孩，不擅长在人前表演，所以让他去学了演讲。小学时，李敏镐曾受教于足球国手车范根门下，表现优异，很受车教练赏识。
+      </p>
+      <p>
+        李敏镐曾说，当时比赛全年级没有人能赢他。小时候梦想成为像朴智星一样的足球选手。然而因在一次比赛中胳膊骨折，父亲希望他能更专注学业，便没有再继续练下去。尽管没有成为足球选手，练习足球仍造就了李敏镐坚毅的性格，出色的球技也成为其日后出道的契机。
+      </p>
+    </section>
   </body>
 </html>
